Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102029

Android camera preview broken in Qt 6.2.4 (regression)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 6.2.4, 6.3.0 Beta1, 6.4.0 FF
    • Multimedia
    • None
    • Android
    • 2022wk14FOAndroid&Automotive, 2022wk16FOAndroid&Automotive

      Android camera example (declarative-camera) shows black screen for camera preview.

      I've bisected the 6.2.4 changes and found the root cause:

      https://codereview.qt-project.org/c/qt/qtmultimedia/+/389864

        For Gerrit Dashboard: QTBUG-102029
        # Subject Branch Project Status CR V

            samuelmira Samuel Mira
            jakoivik Jarkko Koivikko
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes